--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gold Offerings Domain For Sale</title>
+  <title>GoldOfferings.com Domain For Sale</title>
 </head>
 <body>
   <h1>Gold Offerings Domain For Sale</h1>
